--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "intl-tel-input": "~6.0.0",
     "angulartics": "^1.1.3",
     "zxcvbn": "^4.4.1",
-    "semver": "^4.3.4"
+    "semver": "^4.3.4",
+    "fingerprintjs2": "git://github.com/Valve/fingerprintjs2.git#1.5.1"
   },
   "resolutions": {
     "angular": ">= 1.2.23"
